[package]
name = "storm_grok_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web = "4"
actix-web-actors = "4.1.0"
parking_lot = "0.12.1"

env_logger = "0.9"
log = "0.4"
url = "2.2"
uuid = { version = "1.1.2", features = ["v4", "fast-rng"] }
serde = { version = "1.0.144", features = ["derive"] }
bincode = "1.3.3"
async-std = "1.12.0"
