[package]
name = "quic_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
awc = "3"
actix = "0.13.0"
actix-web = "4"
actix-web-actors = "4.1.0"
parking_lot = "0.12.1"
tokio = { version = "1.21.1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
quinn = "0.8.5"
rustls = { version = "*", features = ["dangerous_configuration", "quic"] }
futures-util = "0.3.24"
anyhow = "1.0.65"
rcgen = "0.9.3"
uuid = { version = "1.1.2", features = ["v4", "fast-rng"] }
url = "2.2"
